# oil_production_forecasting

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: arima_best_params.json  lstm_best_params.json  lstm_config.json  lstm_model.keras  prophet_best_params.json  scaler_X.pkl  scaler_y.pkl
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_modeling_prophet.ipynb  05_modeling_arima.ipynb  06_modeling_lstm.ipynb  07_model_comparison.ipynb
results/: arima_predictions.csv  arima_results.json  lstm_predictions.csv  lstm_results.json  model_metrics_summary.csv  prophet_predictions.csv  prophet_results.json
tests/: pytest.ini  test_data.py
